--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Shared/CatCha_Layout.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Shared/CatCha_Layout.cshtml
@@ -58,19 +58,14 @@
                             <a href="#" class="nav-link dropdown-toggle arrow" data-toggle="dropdown">所有商品</a>
                             <ul class="dropdown-menu">
                                 <li><a asp-controller="Index" asp-action="Shop">全部商品</a></li>
-
-
-                               @*  @foreach (var i in Model.DistinctBy(pCategoryName))
+                                @foreach (var i in ViewBag.Categories)
                                 {
                                     <li>
-                                        <a class="for-ajax" href="#" data-category-name="@i.pCategoryName">
-                                            <span>@i.pCategoryName</span>
+                                        <a href="/Index/Shop?categoryName=@i">
+                                            <span>@i</span>
                                         </a>
                                     </li>
-                                } *@
-
-
-
+                                }
                             </ul>
                         </li>
                         <li class="nav-item"><a class="nav-link" asp-controller="ShopNews" asp-action="News">最新消息</a></li>
@@ -275,7 +270,7 @@
 
 @section Scripts{
     <script>
-       
+        
 
         ////右上角登入/註冊字樣切換功能(登入後會出現" Hello,xxx")
         //const targetloginTextClass = 'LoginText';
