--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Shop.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Shop.cshtml
@@ -22,15 +22,13 @@
 }
 <!--提示訊息-->
 <div class="toast-container position-fixed top-25 start-50 translate-middle">
-
-    <div id="shop-toast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-        <div class="toast-header">
-            <img src="..." class="rounded me-2" alt="...">
-            <strong class="me-auto">訊息</strong>
-            <small></small>
-            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-        </div>
-        <div class="toast-body">
+    <div id="shop-toast" class="toast align-items-center" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="d-flex">
+            <div class="toast-body">
+                <i></i>
+                <strong></strong>
+            </div>
+            <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
         </div>
     </div>
 </div>
@@ -39,7 +37,7 @@
     <div class="container">
         <div class="title-all text-left">
             <!--增加:Start當前分類-->
-            <h1 id="categoryTitle"></h1>
+            <h1 id="categoryTitle" data-category-name="@ViewBag.CategoryName"></h1>
         </div>
         <!--增加:End當前分類-->
         <div id="categoryList" class="row">
@@ -50,10 +48,10 @@
                     
                     <div class="col-md-2 col-4">
                         <div class="shop-cat-boxs">
-                        <a class="for-ajax" href="#" data-category-name="@item.pCategoryName">
+                            <a class="for-ajax" href="/Index/Shop?categoryName=@item.pCategoryName" data-category-name="@item.pCategoryName">
                             <img class="img-fluid" src="~/images/category_@{@item.pCategoryName}.jpg" alt="" />
-                                <span>@item.pCategoryName</span>
-                            </a>
+                            <span>@item.pCategoryName</span>
+                        </a>
                         </div>
                     </div>
                 }
