--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/ShopDetail.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/ShopDetail.cshtml
@@ -17,18 +17,17 @@
 }
 <!--提示訊息-->
 <div class="toast-container position-fixed top-25 start-50 translate-middle">
-
-    <div id="detail-toast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-        <div class="toast-header">
-            <img src="..." class="rounded me-2" alt="...">
-            <strong class="me-auto">訊息</strong>
-            <small></small>
-            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-        </div>
-        <div class="toast-body">
+    <div id="detail-toast" class="toast align-items-center" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="d-flex">
+            <div class="toast-body">
+                <i></i>
+                <strong></strong>
+            </div>
+            <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
         </div>
     </div>
 </div>
+
 <!-- Start All Title Box -->
 <div class="all-title-box-picture all-title-box">
     <div class="container">
@@ -161,20 +160,20 @@
                     <div class="price-box-bar">
                         <div id="add-to" class="cart-and-bay-btn">
 
-                            <a href="#" id="addToCartButton" class="btn hvr-hover cart-btn"
+                            <a href="#" class="btn hvr-hover cart-btn"
                                data-product-id="@Model.selectedProduct.pId">
                                 <i class="fa-solid fa-cart-plus"></i>
                             </a>
                             @if (Model.selectedProduct.p是否加入收藏)
                             {
-                                <a href="#" id="addToWishListButton" class="btn hvr-hover favorited"
+                                <a href="#" class="btn hvr-hover like-btn favorited"
                                    data-product-id="@Model.selectedProduct.pId">
                                     <i class="fas fa-heart"></i>
                                 </a>
                             }
                             else
                             {
-                                <a href="#" id="addToWishListButton" class="btn hvr-hover"
+                                <a href="#" class="btn hvr-hover like-btn"
                                    data-product-id="@Model.selectedProduct.pId">
                                     <i class="fas fa-heart"></i>
                                 </a>
@@ -334,6 +333,8 @@
         var rating = $('#review-avg-rating');
         var ratingAvg = @Model.reviews.Average(r=>r.r評分);
         var arrAvg = [];
+        var addTo = $("#add-to");
+        var relatable = $("#relatable-items");
         for (var i = 1; i <= 5; i++) {
             if (ratingAvg >= i) {
                 arrAvg.push(1);
@@ -357,43 +358,12 @@
             }
         });
 
-        // var reviewNum = -1;
-        // $('.review-rating').each(function () {
-        //     reviewNum++;
-        //     var ratingEach = $(this).find('.rating-each').data('rating-each');
-        //     var arr = [];
-        //     arr[reviewNum] = []; // 為每個評論創建一個陣列
-        //     for (var i = 1; i <= 5; i++) {
-        //         if (ratingEach >= i) {
-        //             arr[reviewNum].push(1);
-        //         } else if (ratingEach > i - 1 && ratingEach <= i) {
-        //             arr[reviewNum].push(2);
-        //         }
-        //         else {
-        //             arr[reviewNum].push(0);
-        //         }
-        //     }
-        //     var $ratingContainer = $(this); // 存儲當前元素的引用
-        //     $ratingContainer.find('.rating-each').each(function (index) {
-        //         if (arr[reviewNum][index] == 1) {
-        //             $(this).append('<i class="fa-solid fa-star fa-sm" style="color:#F4CD1E"></i>');
-        //         } else if (arr[reviewNum][index] == 2) {
-        //             $(this).append('<i class="fa-solid fa-star-half fa-sm" style="color:#F4CD1E"></i>');
-        //         } else {
-        //             $(this).append('<i class="fa-solid fa-star fa-sm" style="color: #e0e0e0;"></i>');
-        //         }
-        //     });
-        // });
-
         //輸入數量加入購物車
-        $("#addToCartButton").on("click", function (e) {
+        addTo.on("click",".cart-btn", function (e) {
             e.preventDefault();
-
             var attr = $("#attr").val();
             var count = $("#count").val();
             var productId = $(this).data("product-id");
-
-
             // 發送 Ajax 請求
             $.ajax({
                 url: '/ProductApi/DetailsAddToCart',
@@ -402,26 +372,25 @@
                 dataType: 'json',
                 success: function (response) {
                     if (response.success) {
-                        $('.toast .toast-body').text(response.message);
-                        $('.toast').toast('show');
+                        $('.toast-body i').addClass('toast-added fa-regular fa-circle-check fa-beat fa-lg');
+                        $('.toast-body strong').text(response.message);
+                        $('#detail-toast').toast('show');
                     }
                     else {
-                        $('.toast .toast-body').text(response.message);
-                        $('.toast').toast('show');
+                        $('.toast-body i').addClass('toast-warning fa-solid fa-triangle-exclamation fa-fade fa-lg');
+                        $('.toast-body strong').text(response.message);
+                        $('#detail-toast').toast('show');
                     }
                 },
                 error: function (error) {
-                    console.error('Ajax Error:', error);
                 }
             });
         });
         //加入收藏
-        $("#addToWishListButton").on("click", function (e) {
+        addTo.on("click", ".like-btn", function (e) {
             e.preventDefault();
             var button = $(this);
             var productId = $(this).data("product-id");
-
-
             // 發送 Ajax 請求
             $.ajax({
                 url: '/ProductApi/AddToWishList',
@@ -438,8 +407,10 @@
                         }
                     }
                     else {
-                        $('.toast .toast-body').text(response.message);
-                        $('.toast').toast('show');
+                        $('.toast-body i').addClass('toast-warning fa-solid fa-triangle-exclamation fa-fade fa-lg');
+                        $('.toast-body strong').text(response.message);
+                        $('#detail-toast').toast('show');
+
                     }
                 },
                 error: function (error) {
@@ -447,13 +418,11 @@
             });
         });
 
-
+        //-----------------------相關商品-------------------------
         //相關商品加入購物車
-        $("#relatable-items").on('click', '.cart-btn', function (e) {
+        relatable.on('click', '.cart-btn', function (e) {
             e.preventDefault(); // 阻止<a>標籤的點擊預設行為
-
             var productId = $(this).data('product-id');
-            console.log('Clicked Add to Cart, Product ID:', productId);
             // 透過 Ajax 將商品 ID 傳送到後端，加入購物車
             $.ajax({
                 url: '/ProductApi/AddToCart',
@@ -462,26 +431,26 @@
                 dataType: 'json',
                 success: function (response) {
                     if (response.success) {
-                        $('.toast .toast-body').text(response.message);
-                        $('.toast').toast('show');
+                        $('.toast-body i').addClass('toast-added fa-regular fa-circle-check fa-beat fa-lg');
+                        $('.toast-body strong').text(response.message);
+                        $('#detail-toast').toast('show');
                     }
                     else {
-                        $('#detail-toast .toast-body').text(response.message);
+                        $('.toast-body i').addClass('toast-warning fa-solid fa-triangle-exclamation fa-fade fa-lg');
+                        $('.toast-body strong').text(response.message);
                         $('#detail-toast').toast('show');
                     }
                 },
                 error: function (error) {
-                    console.error('Ajax Error:', error);
                 }
             });
         });
 
         //相關商品加入收藏
-        $("#relatable-items").on('click', '.add-to-wishlist-coustom', function (e) {
+        relatable.on('click', '.add-to-wishlist-coustom', function (e) {
             e.preventDefault(); // 阻止<a>標籤的點擊預設行為
             var button = $(this);
             var productId = $(this).data('product-id');
-            console.log('Clicked Add to Cart, Product ID:', productId);
             // 透過 Ajax 將商品 ID 傳送到後端，加入購物車
             $.ajax({
                 url: '/ProductApi/AddToWishList',
@@ -498,7 +467,8 @@
                         }
                     }
                     else {
-                        $('#detail-toast .toast-body').text(response.message);
+                        $('.toast-body i').addClass('toast-warning fa-solid fa-triangle-exclamation fa-fade fa-lg');
+                        $('.toast-body strong').text(response.message);
                         $('#detail-toast').toast('show');
                     }
                 },
@@ -507,6 +477,6 @@
             });
         });
 
-
+    
     </script>
 }
