-修正 頁碼點選時跑版問題

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
@@ -187,9 +187,9 @@
             </div>
             <nav class="pagination-container" aria-label="Page navigation example">
                 <ul class="pagination" style="display:none;">
-                    <li class="page-item"><a class="btn btn-outline-info" href="#" onclick="showPage('a')" id="pageA">1</a></li>
-                    <li class="page-item"><a class="btn btn-outline-info" href="#" onclick="showPage('b')" id="pageB">2</a></li>
-                    <li class="page-item"><a class="btn btn-outline-info" href="#" onclick="showPage('c')" id="pageC">3</a></li>
+                    <li class="page-item"><a class="btn btn-outline-info" href="#" onclick="showPage('a'); return false;" id="pageA">1</a></li>
+                    <li class="page-item"><a class="btn btn-outline-info" href="#" onclick="showPage('b'); return false;" id="pageB">2</a></li>
+                    <li class="page-item"><a class="btn btn-outline-info" href="#" onclick="showPage('c'); return false;" id="pageC">3</a></li>
                 </ul>
             </nav>
         </div>
